hphp/hack/test/typecheck/parent_in_prop_decl.php.exp
File "parent_in_prop_decl.php", line 6, characters 24-37:
Cannot use static or parent::class in property declaration (Parsing[1002])
